[package]
name = "eos"

# When releasing to crates.io:
# - Update CHANGELOG.md.
# - Create "v0.1.x" git tag.

version = "0.1.0"
authors = ["Alexey Karasev <karasev.alexey@gmail.com>, Sergey Efremov <s.efremov@storiqa.com>"]
description = "Tools for writing EOS smart contracts in Rust"
repository = "https://github.com/StoriqaTeam/eos.git"
homepage = "https://github.com/StoriqaTeam/eos.git"
documentation = "https://github.com/StoriqaTeam/eos.git"
license = "MIT"
readme = "README.md"
categories = ["blockchain", "network-programming"]
keywords = ["eos", "blockchain", "smart-contracts"]

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

[profile.release]
debug = false
lto = true
opt-level = 's'
panic = 'abort'

[dependencies]
wee_alloc = "0.4.2"
cfg-if = "0.1.2"

[features]
default = ["custom_allocator"]
custom_allocator = []
wee_allocator = []

[workspace]

members = [
    "examples/review",
]